fix: related pic styles on mobile

--- a/src/styles/pic/related.less
+++ b/src/styles/pic/related.less
@@ -39,6 +39,14 @@
         &-title {
             font-size: 24px;
         }
+        &-content {
+            .waterfall-wrapper {
+                width: 100%;
+                .waterfall-container {
+                    margin: 0 auto;
+                }
+            }
+        }
     }
 }
 
